trying to fix contact header spacing issue on vercel

--- a/src/Pages/Contact/contact.scss
+++ b/src/Pages/Contact/contact.scss
@@ -170,7 +170,7 @@
         }
         @media screen and (max-width: styles.$screen-sm-max) {
           left: 8vw;
-          margin: 70px 0px 80px 0px;
+          margin: 60px 0px 70px 0px;
         }
       }
       .line-and-contact-info-container-mobile {
